# Flex-Bison-Meson

./: README.md
ch1/1/: CMakeLists.txt  lexer.l  meson.build
ch1/2/: CMakeLists.txt  lexer.l  meson.build
ch1/3/: lexer.l  meson.build
ch1/4/: CMakeLists.txt  lexer.l  meson.build
ch1/5/: CMakeLists.txt  lexer.l  meson.build  parser.y
ch2/1/: CMakeLists.txt  lexer.l  meson.build
ch2/2/: lexer.l  meson.build
ch2/3/: CMakeLists.txt  README.md  lexer.l  meson.build
ch2/3/test_files/: my_stdio.h  test.h
ch2/3/tests/: stdio.h  test.h
ch2/4/: CMakeLists.txt  lexer.l  meson.build
ch2/4/test_files/: tempest.txt
ch2/5/: CMakeLists.txt  lexer.l  meson.build
ch3/1/: CMakeLists.txt  aux.c  aux.h  lexer.l  meson.build  parser.y
ch3/2/: CMakeLists.txt  aux.c  aux.h  lexer.l  meson.build  parser.y
ch4/: glrmysql.l  lpmysql.l  pmysql.l  pmysql.y
cppcalc/: cppcalc.l
most-basic-lexer/: CMakeLists.txt
pure/: purecalc.h  purecalc.l  purecalc.y  purecalcfuncs.c  purewc.l
word-freq/: CMakeLists.txt  lexer.l
word-freq/tests/: test1.txt
word-uniq/: CMakeLists.txt  lexer.l
