CMAKE_MINIMUM_REQUIRED(VERSION 3.27)

PROJECT(wc LANGUAGES C)

# Glib2
FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GLIB2 REQUIRED glib-2.0)
message("glib found: " ${GLIB2_FOUND})
message("glib include dirs: " ${GLIB2_INCLUDE_DIRS})
message("glib lib: " ${GLIB2_LIBRARY_DIRS})

FIND_PACKAGE(FLEX)

FLEX_TARGET(SCANNER lexer.l ${CMAKE_CURRENT_BINARY_DIR}/lexer.c)

ADD_EXECUTABLE(${PROJECT_NAME} ${FLEX_SCANNER_OUTPUTS})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${GLIB2_INCLUDE_DIRS})
TARGET_LINK_DIRECTORIES(${PROJECT_NAME} PUBLIC ${GLIB2_LIBRARY_DIRS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${FLEX_LIBRARIES} ${GLIB2_LIBRARIES})
