CMAKE_MINIMUM_REQUIRED(VERSION 3.27)

PROJECT(calc LANGUAGES C)

FIND_PACKAGE(FLEX)
FIND_PACKAGE(BISON)

FLEX_TARGET(SCANNER lexer.l  ${CMAKE_CURRENT_BINARY_DIR}/lexer.c)
BISON_TARGET(PARSER parser.y ${CMAKE_CURRENT_BINARY_DIR}/parser.c DEFINES_FILE ${CMAKE_CURRENT_BINARY_DIR}/parser.h)
ADD_FLEX_BISON_DEPENDENCY(SCANNER PARSER)

ADD_EXECUTABLE(${PROJECT_NAME} aux.c ${FLEX_SCANNER_OUTPUTS} ${BISON_PARSER_OUTPUTS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${FLEX_LIBRARIES} m)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
